k8s/local/media-root-credentials-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: common-media-service }
spec:
  template:
    spec:
      containers:
        - name: common-media-service
